# EmailPrioritizationClassifier

./: .gitignore  README.md  app.py  finalized_model_lr.dill  pyproject.toml  requirements.txt
.github/workflows/: test.yml
data/: enron_emails_processed.csv  holdout_emails.csv  mfa_verification_emails.csv  non_urgent_basic_emails.csv  promotional_emails.csv  reviewed_labels_enron_0.csv  reviewed_labels_enron_1.csv  urgent_time_sensitive_emails.csv
email_prioritizer/: email_prioritizer.py
notebooks/: prioritize_emails.ipynb  spam_detectory.ipynb
src/email_prioritizer/: __init__.py  email_prioritizer.py
tests/: test_email_prioritizer.py
utils/: generate_basic_emails.py  generate_mfa_emails.py  generate_promotional_emails.py  generate_urgent_emails.py
