[project]
name = "email_prioritizer"
version = "0.1.0"
description = "Email prioritization classifier with NLP preprocessing and ML pipeline."
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    # --- Web App Framework ---
    "streamlit>=1.37.0",

    # --- Core Machine Learning and NLP Stack ---
    "scikit-learn>=1.3.0",
    "nltk>=3.8.1",
    "catboost>=1.2",

    # --- Data Handling and Utilities ---
    "pandas>=2.1.0",
    "numpy>=1.25.0",
    "joblib>=1.3.2",
    "dill>=0.3.7",

    # --- Visualization ---
    "matplotlib>=3.8.0",
    "seaborn>=0.12.2",
    "plotly>=5.18.0",

    # --- File watching / reloading utilities ---
    "watchdog>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=24.0",
    "ruff>=0.3.0",
]


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
